# monitoring

./: Cargo.toml  README.md  update-github.sh  update.sh
.github/workflows/: rust.yml
src/: index.html  main.rs
