[package]
name = "belajar-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# sysinfo untuk RAM, CPU, Disk, dan Sensors
sysinfo = "0.30"
# bollard untuk interaksi dengan Docker socket
bollard = "0.15"