[package]
name = "mini-pc-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
bollard = "0.15"
futures-util = "0.3"
chrono = "0.4"
jemallocator = "0.5" # Tambahkan ini untuk optimasi RAM